Adicionando volume do app no docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,8 @@ services:
       context: ./node
     container_name: app
     tty: true
+    volumes:
+      - ./node:/usr/src/app
     networks:
       - node-network    
   
