--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,18 +14,21 @@ services:
       - MYSQL_ROOT_PASSWORD=root
       # - MYSQL_USER=root 
     networks:
-      - node-network
+      - node-network            
 
   app:
     build:
       context: ./node
     container_name: app
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
     tty: true
     volumes:
       - ./node:/usr/src/app
     networks:
-      - node-network    
-  
+      - node-network
+    depends_on:
+      - db
+
   nginx:
     build:
       context: ./nginx
@@ -34,6 +37,9 @@ services:
       - node-network
     ports:
       - "8080:80"
+    depends_on: 
+      - db
+      - app
 
 networks:
   node-network:
